# gpu_task_model_prediction_time

./: .env  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  analyze_slowdown.py  main  main.cpp  requirements.txt  rodar_experimentos.sh
docs/: DATA_DICTIONARY.md  PROJECT_ORGANIZATION.md  STRUCTURE_GUIDE.md
experimentos/: slowdown_test.json  sweep_padrao.json
libs/include/: config.hpp  csv_writer.hpp  cuda_kernels.cuh  env_loader.hpp  experiment.hpp  gpu_telemetry.hpp
libs/src/: config.cpp  csv_writer.cpp  cuda_kernels.cu  env_loader.cpp  experiment.cpp  gpu_telemetry.cpp  timer.cpp
scripts/: 03_regressor_analysis.py  05_plot_best_model_rankings.py  06_plot_dependency_rankings.py  README.md  analisar_regressoes_sweep.sh  analisar_sweeps_normal_e_telemetria.ps1  analisar_sweeps_normal_e_telemetria.sh  analyze_slowdown.py  build_gantt_csv.py  compare_regressors.py  configurar_tensorflow_gpu.sh  gerar_resultados_sweep.py  rodar_experimentos.sh  rodar_experimentos_2seeds_e_pipelines.sh  rodar_experimentos_com_telemetria.sh  rodar_pipeline_a_machine_learning.sh  rodar_pipeline_b_extremos.sh  rodar_pipeline_c_cnn2d.sh  rodar_sweep_normal_e_telemetria.sh  rodar_todas_pipelines.sh  run_slowdown_test.sh  train_linear_baseline.py  treinar_modelos_sweep.py  use_trained_models.py
scripts/py_outros/: A0_analisar_slowdown.py  A6_gerar_gantt_csv.py  comparar_modelos_pipelines.py  migrar_analises_para_nova_estrutura.py
scripts/py_pipeline_A/: A1_gerar_manifesto_analise.py  A2_regressores_classicos.py  A3_rankings_regressores.py  A4_rankings_dependencia.py  A5_modelos_sequenciais.py  A7_usar_modelos_treinados.py
scripts/py_pipeline_B/: B1_valores_extremos.py
scripts/py_pipeline_C/: C1_preprocessamento_2d.py  C2_treinar_cnn_2d.py  C3_rankings_e_graficos.py
src/config/: config.cpp  config.hpp
src/timing/: timer.hpp
(+7 files in other folders)
